traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - protocol: TCP
    name: traefik-dashboard-port
    port: 9000
    targetPort: 9000
  - protocol: TCP
    name: traefik-metrics-port
    port: 9100
    targetPort: 9100
  type: LoadBalancer
