traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  rules:
  - host: traefik.bluesky.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-service
            port:
              number: 9000
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: traefik-service
            port:
              number: 9100
